2009-08-13  Sam Steingold  <sds@gnu.org>

	* makemake.in: use $0 in all error messages

2009-08-13  Sam Steingold  <sds@gnu.org>

	* makemake.in (distrib) [win32]: fix echo_dist_modules invocation
	Reported by Yaroslav Kavenchuk

2009-08-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (modcheck): pass :SRCDIR and :OUTDIR to RUN-SOME-TESTS

2009-08-11  Sam Steingold  <sds@gnu.org>

	* gllib/unistd.in.h, modules/regexp/gllib/unistd.in.h:
	* modules/syscalls/gllib/unistd.in.h:
	import the gnulib fix of the 'close' socket dependency

2009-08-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (anymodule): do not do "cd $@" twice in the same shell

2009-08-11  Vladimir Tzankov  <vtzankov@gmail.com>

	* spvw_genera1.d (build_old_generation_cache)
	(rebuild_old_generation_cache): fix g++ build (goto crosses auto vars
	initialization)
	* spvw.d (get_module_symbol): add typecast

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/fastcgi/configure.in: use AC_LIB_LINKFLAGS to accept
	--with-libfcgi-prefix
	* modules/fastcgi/link.sh.in (NEW_LIBS): use @LIBS@

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/oracle/configure.in: generate link.sh
	* modules/oracle/link.sh.in: renamed from link.sh
	* modules/oracle/Makefile.in (link.sh): remove target

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/fastcgi/configure.in: check for fcgi_stdio.h; generate link.sh
	* modules/fastcgi/link.sh.in: renamed from link.sh
	* modules/fastcgi/Makefile.in (link.sh): remove target

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/dirkey/configure.in: generate link.sh
	* modules/dirkey/link.sh.in: renamed from link.sh

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (MKNOD): use S(member) instead of
	`CL:MEMBER` to avoid wasting memory

2009-08-10  Sam Steingold  <sds@gnu.org>

	* modules/regexp/Makefile.in (regexi.o): -I$(srcdir)/gllib
	* modules/syscalls/Makefile.in (calls.o): -I$(srcdir)/gllib